# PYTHON_ECOMMERCE

./: .gitignore  .pre-commit-config.yaml  404.html  CNAME  README.md  Roadmap.md  admin-test.html  admin.html  categoria.html  como-funciona.html  firebase.json  firestore.rules  index.html  manifest.json  painel-shopee-vendas.html  politica-privacidade.html  pyproject.toml  roadmap.md  robots.txt  shopee_workflow_keywords.txt  sitemap.xml  sw.js  termos-de-uso.html
.github/workflows/: firebase-deploy.yml  import-shopee-products.yml  sync-shopee-prices.yml
css/: style.css
js/: admin.js  analytics.js  app.js  config.example.js  config.js  pwa.js  worker.js
scratch/: admin_helpers.js  debug_events.py  test.py
scripts/: find_shopee_item.py  generate_sitemap.py  import_shopee_products.py  resolve_shopee_link.py  sync_shopee_prices.py  test_shopee_api.py
