[project]
name = "python-ecommerce"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "firebase-admin>=6.6.0",
]

[dependency-groups]
dev = [
    "mypy>=1.20.2",
    "pre-commit>=4.5.1",
    "ruff>=0.15.11",
    "types-requests>=2.33.0.20260408",
]

[tool.mypy]
ignore_missing_imports = true
